add questions test data , home, create page

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -28,7 +28,7 @@ html
     footer#footer
     #login-dialog
     #register-dialog
-      
+
     include ./jade/layout
 
   include ./jade/_library
@@ -52,6 +52,7 @@ html
   script(src="/scripts/common/course.js")
   script(src="/scripts/common/category.js")
   script(src="/scripts/common/consultant.js")
+  script(src="/scripts/common/question.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
@@ -67,6 +68,7 @@ html
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
   script(src="/scripts/modules/course/home.js")
+  script(src="/scripts/modules/question/question.js")
   script(src="/scripts/modules/chatRoom/chatRoom.js")
 
   script(src="/scripts/modules/psychtests/psychtests-ui.js")
