--- a/dionysus-client/yo/templates/home/question/editor.jade
+++ b/dionysus-client/yo/templates/home/question/editor.jade
@@ -1,12 +1,19 @@
 #create.question
-  lael.module 你问我答
-  .ui.form
-    #QTitle
-      span
-        label 问题
-      input#title
-    #QDescription
-      label 问题详细描述
-      textarea#description
-    #tagsInput
-    #submit.ui.button
+  .ui.centered.grid
+    .eight.wide.column
+      .basic.ui.segment
+        img.ui.image(src="/public/images/question.png")
+      #content.basic.ui.segment
+        .ui.form
+          .field
+            h3
+              a 问题
+            input#title
+          .field
+            h3
+              a 详细描述
+            textarea#description
+        h3
+          a 输入标签
+        input(id="tags",name="tags",value="")
+        #submit.green.medium.ui.button(style="float:right;margin-top:30px;margin-bottom:20px;") 提交问题
