--- a/dionysus-client/yo/templates/home/question/questionHome.jade
+++ b/dionysus-client/yo/templates/home/question/questionHome.jade
@@ -1,40 +1,52 @@
 #home.question
-  .ui.centered.divided.grid
+  .ui.centered.grid
     .eight.wide.column
-      lable.module 你问我答
+      img.ui.image(src="/public/images/question.png")
       #content.basic.ui.segment
+        h2
+          label 最热
+        .ui.divider
         #popular
           .ui.divided.items
             |{{#each popular}}
             .item
-              a.header(href="/questions/{{id}}") {{title}}
+              h3
+                a.header(href="/questions/{{id}}") {{title}}
               .meta
                 span 来自： {{author.username}}
                 span 答案： {{numberOfAnswers}}
             |{{/each}}
+        h2
+          label 最新
+        .ui.divider
         #latest
           .ui.divided.items
             |{{#each latest}}
             .item
-              a.header(href="/questions/{{id}}") {{title}}
+              h3
+                a.header(href="/questions/{{id}}") {{title}}
               .meta
                 span 来自： {{author.username}}
                 span 答案： {{numberOfAnswers}}
             |{{/each}}
-        #cats
-          .ui.green.basic.button#all 所有问题
-          .ui.green.basic.button#answered 已有答案的问题
-          .ui.green.basic.buqtton#noAnwered 没有答案的问题
-          .ui.green.basic.button#myQuestions 我的问题
-        #questions
+        .ui.divider
+        #cats(style="padding-top:20px;")
+          .ui.large.basic.button#all 所有问题
+          .ui.large.basic.button#answered 已经解决
+          .ui.large.basic.button#noAnwered 等待解决
+          .ui.large.basic.button#myQuestions 我的问题
+        .ui.divider
+        #questions(style="padding-top:20px;")
     .sidebar.four.wide.column
-      .basic.ui.segment
-        #create
-        #tags
-          |{{#each popularTags}}
-          .ui.mini.label {{name}}
-          |{{/each}}
-
-
-
-
+      .ui.basic.segment#create(style="background:#F5F5F6;padding-top:20px;padding-bottom:30px;")
+        p
+          h4 在这里寻求最专业的解答，通过问答互动每天学点心理知识!
+        #wrapper(style="text-align:center;margin-top:30px;")
+          .ui.big.green.button#newQuestion 我要提问！
+      #tags(style="margin-top:30px;")
+        h4
+          label 热门标签
+        .ui.mini.button.tag.all 所有
+        |{{#each popularTags}}
+        .ui.mini.button.tag {{name}}
+        |{{/each}}
