open link to question module

--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -14,3 +14,4 @@
       a.item(href="/courses") 心理课程
       a.item(href="/psychtestsuites") 心理测试
       a.item(href="/fms") 心理FM
+      a.item(href="/questions") 心理问答
