--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -3,6 +3,7 @@
 @import "course";
 @import "audioPlayer";
 @import "psychtest";
+@import "question";
 
 .brand {
   background-image: url('/public/images/logo.jpg');
