--- a/dionysus-client/yo/templates/home/question/editor.jade
+++ b/dionysus-client/yo/templates/home/question/editor.jade
@@ -16,4 +16,4 @@
         h3
           a 输入标签
         input(id="tags",name="tags",value="")
-        #submit.green.medium.ui.button(style="float:right;margin-top:30px;margin-bottom:20px;") 提交问题
+        #submit.green.medium.ui.button 提交问题
