--- a/dionysus-client/yo/templates/home/question/questionHome.jade
+++ b/dionysus-client/yo/templates/home/question/questionHome.jade
@@ -30,20 +30,20 @@
                 span 答案： {{numberOfAnswers}}
             |{{/each}}
         .ui.divider
-        #cats(style="padding-top:20px;")
+        #cats
           .ui.large.basic.button#all 所有问题
           .ui.large.basic.button#answered 已经解决
           .ui.large.basic.button#noAnwered 等待解决
           .ui.large.basic.button#myQuestions 我的问题
         .ui.divider
-        #questions(style="padding-top:15px;")
-      #wrapper(style="text-align:center;margin-top:50px;margin-bottom:50px;")
+        #questions
+      #pagnationWrapper
         #pagnation
     .sidebar.four.wide.column
-      .ui.basic.segment#create(style="background:#F5F5F6;padding-top:20px;padding-bottom:30px;")
+      .ui.basic.segment#create
         p
           h4 在这里寻求最专业的解答，通过问答互动每天学点心理知识!
-        #wrapper(style="text-align:center;margin-top:30px;")
+        #createBtn
           .ui.big.green.button#newQuestion 我要提问！
       #tags(style="margin-top:30px;")
         h4
