move css to question.less

--- a/dionysus-client/yo/app/styles/question.less
+++ b/dionysus-client/yo/app/styles/question.less
@@ -33,7 +33,7 @@
   }
   #comments {
     margin-top:20px;
-    #answer .submit.button {
+    .submit.button {
       float:right;
       margin-top:15px;
     }
