move css to question.less

--- a/dionysus-client/yo/app/styles/question.less
+++ b/dionysus-client/yo/app/styles/question.less
@@ -12,12 +12,16 @@
   }
   #create {
     background:#F5F5F6;
-    padding-top:20px;
+    padding-top:10px;
     padding-bottom:30px;
   }
   #createBtn {
     text-align:center;
     margin-top:30px;
+  }
+
+  #tags {
+    margin-top:40px;
   }
 }
 
