--- a/dionysus-client/yo/templates/home/question/questionHome.jade
+++ b/dionysus-client/yo/templates/home/question/questionHome.jade
@@ -45,7 +45,7 @@
           h4 在这里寻求最专业的解答，通过问答互动每天学点心理知识!
         #createBtn
           .ui.big.green.button#newQuestion 我要提问！
-      #tags(style="margin-top:30px;")
+      #tags
         h4
           label 热门标签
         .ui.mini.button.tag.all 所有
