save psychtest results

--- a/dionysus-client/yo/templates/home/psychtests/suite.jade
+++ b/dionysus-client/yo/templates/home/psychtests/suite.jade
@@ -1,10 +1,10 @@
 h3.header {{ title }}
-.ui.grid
+.ui.stackable.grid
   .six.wide.column
     img.ui.image(src="/public/images/placeholder.png")
 
   .ten.wide.column.ui.list
-    table.ui.very.basic.table
+    table.ui.very.basic.unstackable.table
       thead
         tr
           th 项目名称
