--- a/dionysus-client/yo/templates/home/chat/room.jade
+++ b/dionysus-client/yo/templates/home/chat/room.jade
@@ -1,6 +1,6 @@
 .ui.segment
 	.ui.feed#feed
-.ui.form
+form.ui.form
 	.field
-		input#message(type="text", placeholder="说点什么...")
+		input#message(type="text", name="msg", placeholder="说点什么...")
 	.ui.submit.button 提交
