--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -53,6 +53,7 @@ html
   script(src="/scripts/common/category.js")
   script(src="/scripts/common/consultant.js")
   script(src="/scripts/common/question.js")
+  script(src="/scripts/common/chatRoom.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
