--- a/dionysus-client/yo/templates/home/question/questionHome.jade
+++ b/dionysus-client/yo/templates/home/question/questionHome.jade
@@ -1,5 +1,5 @@
 #home.question
-  .ui.centered.grid
+  .ui.centered.stackable.grid
     .eight.wide.column
       img.ui.image(src="/public/images/question.png")
       #content.basic.ui.segment
