--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -15,3 +15,4 @@
       a.item(href="/psychtestsuites") 心理测试
       a.item(href="/fms") 心理FM
       a.item(href="/questions") 心理问答
+      a.item(href="/rooms") 心理聊天室
