--- a/dionysus-client/yo/app/styles/question.less
+++ b/dionysus-client/yo/app/styles/question.less
@@ -2,6 +2,9 @@
   #cats {
     padding-top:20px;
     margin-bottom:30px;
+    .button {
+      margin-right:30px;
+    }
   }
   #questions {
     padding-top:15px;
@@ -38,7 +41,7 @@
   }
   #comments {
     margin-top:20px;
-    .submit.button {
+    #submit {
       float:right;
       margin-top:15px;
     }
