--- a/dionysus-client/yo/templates/home/chat/room.jade
+++ b/dionysus-client/yo/templates/home/chat/room.jade
@@ -5,6 +5,9 @@
 	.ui.two.column.equal.height.stackable.grid
 		.ten.wide.column
 			.ui.segment
+				#loading
+					i.big.asterisk.loading.icon 
+					|正在连接...
 				.ui.feed#feed
 			form.ui.form
 				.field
