adjust layout of murmurHome.jade

--- a/dionysus-client/yo/templates/home/murmur/murmurHome.jade
+++ b/dionysus-client/yo/templates/home/murmur/murmurHome.jade
@@ -2,10 +2,10 @@
   .ui.centered.stackable.grid
     .eight.wide.column
       h2 我要吐槽
-      #content.basic.ui.segment
+      .basic.ui.segment
         .ui.form
           .field
-            textarea#description
+            textarea#content
         #submit.green.medium.ui.button 发表
         #murmurs(style="clear:both;margin-top:100px;")
           .ui.divided.items
