modify question.less to avoid use common name to result confilct

--- a/dionysus-client/yo/app/styles/question.less
+++ b/dionysus-client/yo/app/styles/question.less
@@ -1,4 +1,4 @@
-#home {
+#home.question {
   #cats {
     padding-top:20px;
     margin-bottom:30px;
@@ -29,13 +29,13 @@
   }
 }
 
-#create #submit {
+#create.question #submit {
   float:right;
   margin-top:30px;
   margin-bottom:20px;
 }
 
-#detail  {
+#detail.question  {
   .description {
     margin-top:20px;
   }
