--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -64,6 +64,7 @@ html(class="no-js")
   script(src="/scripts/admin/category-management.js")
   script(src="/scripts/admin/course-management.js")
   script(src="/scripts/admin/coursesummary.js")
+  script(src="/scripts/admin/psytest-management.js")
   script(src="/scripts/admin/appointment-management.js")
   script(src="/scripts/admin/consultant-management.js")
   script(src="/scripts/admin/tests.js")
