--- a/dionysus-client/yo/templates/admin/articles/editor.jade
+++ b/dionysus-client/yo/templates/admin/articles/editor.jade
@@ -7,6 +7,7 @@
       option(value="DOC") 文章
       option(value="AUDIO") 音频
       option(value="BLOG") 博客
+      option(value="GAME") 游戏
   .field
     label 类别
     select.ui.dropdown(name="category")
