--- a/dionysus-client/yo/templates/home/article/listPage/gameListItems.jade
+++ b/dionysus-client/yo/templates/home/article/listPage/gameListItems.jade
@@ -1,9 +1,9 @@
 .row
 	.column
 		.ui.huge.breadcrumb
-			a {{items.[0].type}}
+			i 心理互动
 			i.right.chevron.icon.divider
-			a {{items.[0].category.name}}
+			i 心理游戏
 .row
 	.column
 		.ui.items
