open murmur module menu entry

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -53,6 +53,7 @@ html
   script(src="/scripts/common/category.js")
   script(src="/scripts/common/consultant.js")
   script(src="/scripts/common/question.js")
+  script(src="/scripts/common/murmur.js")
   script(src="/scripts/common/chatRoom.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
@@ -70,6 +71,7 @@ html
   script(src="/scripts/modules/error.js")
   script(src="/scripts/modules/course/home.js")
   script(src="/scripts/modules/question/question.js")
+  script(src="/scripts/modules/murmur/murmur.js")
   script(src="/scripts/modules/chatRoom/chatRoom.js")
 
   script(src="/scripts/modules/psychtests/psychtests-ui.js")
