--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -4,6 +4,7 @@
 @import "audioPlayer";
 @import "psychtest";
 @import "question";
+@import "murmur";
 
 .brand {
   background-image: url('/public/images/logo.jpg');
