finish murmur module

--- a/dionysus-client/yo/templates/home/header/login.jade
+++ b/dionysus-client/yo/templates/home/header/login.jade
@@ -16,5 +16,6 @@
       a.item(href="/psychtestsuites") 心理测试
       a.item(href="/fms") 心理FM
       a.item(href="/questions") 心理问答
+      a.item(href="/murmurs") 吐槽
       a.item(href="/rooms") 心理聊天室
       a.item(href="/articles/list/games") 心理游戏
