--- a/dionysus-client/yo/app/styles/murmur.less
+++ b/dionysus-client/yo/app/styles/murmur.less
@@ -5,6 +5,19 @@
     margin-bottom: 20px;
   }
 
+  #menu {
+    clear:both;
+    margin-top:120px;
+  }
+
+  #allmurmurs {
+    padding-left: 0px;
+  }
+
+  #murmurs{
+    margin-top : 30px;
+  }
+
   #pagnationWrapper {
     text-align:center;
     margin-top:50px;
