psychoprofile UI for test

--- a/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
+++ b/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
@@ -1,4 +1,5 @@
 td.user {{ user.username }}
+td.title {{ test.title }}
 td.date {{ date }}
 td.save
   .ui.small.red.input.button(style="margin-left:20px;") 输入档案
