--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -55,6 +55,7 @@ html
   script(src="/scripts/common/question.js")
   script(src="/scripts/common/murmur.js")
   script(src="/scripts/common/chatRoom.js")
+  script(src="/scripts/common/psychotest.js")  
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
