finish psychprofile for test

--- a/dionysus-client/yo/templates/admin/psychoprofile/psychoprofile.jade
+++ b/dionysus-client/yo/templates/admin/psychoprofile/psychoprofile.jade
@@ -1,6 +1,6 @@
 .two.fields
   .field
-    label 预约人
+    label 客户
     .ui.left.icon.input
       input(type="text", name="username", value="{{ username }}")
       i.user.icon
