--- a/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
+++ b/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
@@ -1,5 +1,6 @@
-td.user {{ user.username }}
-td.title {{ test.title }}
+td.user {{ username }}
+td.title {{ title }}
 td.date {{ date }}
 td.save
+  .ui.small.green.save.button 查看结果
   .ui.small.red.input.button(style="margin-left:20px;") 输入档案
