fix bug for pagenation of course

--- a/dionysus-client/yo/templates/home/course/home.jade
+++ b/dionysus-client/yo/templates/home/course/home.jade
@@ -43,7 +43,7 @@
                   a.title(href="/courses/{{id}}") {{title}}
           |{{/each}}
       .two.column.centered.row
-        .centered.column
+        .centered.column#videoWrapper
           #pagenation-video.pagenation
       .twelve.wide.column.centered
         .ui.divider
@@ -66,7 +66,7 @@
                 .room.reg.ui.green.tiny.basic.button(data-id="{{id}}") 加 入
           |{{/each}}
       .two.column.centered.row
-        .centered.column
+        .centered.column#roomWrapper
           #pagenation-room.pagenation
       .twelve.wide.centered.column
         .ui.divider
