organization home layout

--- a/dionysus-client/yo/templates/home/organization/home.jade
+++ b/dionysus-client/yo/templates/home/organization/home.jade
@@ -1,3 +1,10 @@
-//
-   Created by pengwang on 8/5/2015.
-
+#home.organization
+  .ui.centered.stackable.grid
+    .body.eight.wide.column
+      h2
+        |this is organization body
+      #pagnationWrapper
+        #pagnation
+    .sidebar.four.wide.column
+      h2
+        |this is organization side bar.
