--- a/dionysus-client/yo/templates/home/profile/appointmentsConsultant.jade
+++ b/dionysus-client/yo/templates/home/profile/appointmentsConsultant.jade
@@ -1,7 +1,6 @@
 table.ui.stackable.table
   thead
     tr
-      th 咨询师
       th 咨询对象
       th 方式
       th 日期
@@ -10,16 +9,16 @@ table.ui.stackable.table
   tbody
     {{#each items}}
     tr
-      td {{consultant.realName}}
       td {{name}}
       td {{approach}}
       td {{date}}
       td
-        a(class="ui {{state_color}} label") {{state}} 
-      {{#if approach_online}}
+        select(name="state").ui.dropdown
+          option(value="WAITING")  等待中
+          option(value="ACCEPTED") 已接受
+          option(value="DECLINED") 已拒绝
+          option(value="FINISHED") 已完成 
       td
-        a.ui.basic.green.button(href="{{consultant.qqAddress}}") 开始会话
-      {{else}}
-      td 请等待通知
-      {{/if}}
+        .ui.small.green.save.button 保存
+        .ui.small.button(style="margin-left:20px;") 删除
     {{/each}}
