add organization module

--- a/dionysus-client/yo/templates/home/organization/detail.jade
+++ b/dionysus-client/yo/templates/home/organization/detail.jade
@@ -1,3 +1,23 @@
-//
-   Created by pengwang on 8/5/2015.
-
+#detail.organization
+  .ui.centered.stackable.grid
+    .body.eight.wide.column
+      img.ui.image(src="{{avatar}}")
+      #content.basic.ui.segment
+        h2.ui.header.title {{realName}}
+        p {{about}}
+        h2.ui.header.blogs 我们的文章
+        #blogList.ui.divided.items
+          |{{#each blogs}}
+          .ui.item
+            .content
+              a.header(src="/articles/{{id}}") {{title}}
+              .description {{description}}
+          |{{/each}}
+        #pagnationWrapper
+          #pagnation
+    .sidebar.four.wide.column
+      .ui.basic.segment#add
+        p
+          h4 申请加入心理圈
+        #addContainer
+          .ui.big.green.button#adding 申 请
