adjust organization applying form

--- a/dionysus-client/yo/templates/home/organization/form.jade
+++ b/dionysus-client/yo/templates/home/organization/form.jade
@@ -17,5 +17,6 @@
       .field
         label 电子邮件
         input(name="email",type="text",placeholder="电子邮件")
-      .button.submit 提 交
+    #submitContainer
+      .ui.green.button.submit 提 交
 
