organization form text adjustment

--- a/dionysus-client/yo/templates/home/organization/form.jade
+++ b/dionysus-client/yo/templates/home/organization/form.jade
@@ -1,6 +1,6 @@
 #form.organization
   .ui.segment
-    h3.header 请填写机构真实信息，我们会在线下通过电话来联系您验证提交的信息
+    h3.header 请填写机构真实信息，我们会在线下联系您验证所提交的信息
     .ui.form#applyForm
       .field
         label 机构名称
