site page modules entry centered

--- a/dionysus-client/yo/templates/home/site.jade
+++ b/dionysus-client/yo/templates/home/site.jade
@@ -4,7 +4,7 @@
       h1.ui.header 汇心网，关怀无处不在
       p.content 24小时x360度零距离与您贴心相伴
 
-.row.ui.four.column.grid.centered
+.row.ui.four.column.grid.centered#modules
   .column
     a.ui.blue.card(href="/articles")
       .content
@@ -26,7 +26,7 @@
   .column
     a.ui.purple.card(href="/courses")
       .content
-        .ui.icon.header 心理科课程 
+        .ui.icon.header 心理科课程
           i.circular.users.icon
         .description 线下课程／线上课程／录制课程
       .ui.bottom.attached.button 进入
