add navigator height

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -75,6 +75,8 @@ main {
     width: ~"calc(100% - 325px)";
     position: relative;
     margin: 0 auto;
+    padding-top:0.5rem;
+    padding-bottom:0.5rem;
   }
   .jumbotron {
     height: 400px;
