adjust footer address add underline

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -133,3 +133,10 @@ ul.course-categories {
   margin-right:auto;
 }
 
+#footer {
+  .address{
+    text-decoration:underline;
+    padding-left:1rem;
+  }
+}
+
