--- a/dionysus-client/yo/templates/home/footer.jade
+++ b/dionysus-client/yo/templates/home/footer.jade
@@ -1,4 +1,4 @@
-.ui.centered.grid
+.ui.centered.grid#footer
   .twelve.wide.column
     .ui.four.column.horizontally.padded.stackable.grid
       .equal.height.row
@@ -51,5 +51,6 @@
       .centerd.row
         .grey.eight.wide.column
           .ui.basic.center.aligned.segment
-            p 地址 xxxxxx
-                    
+            |地址
+            span.address xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
