add margin for item meta span to avoid close each other too much

--- a/dionysus-client/yo/app/styles/question.less
+++ b/dionysus-client/yo/app/styles/question.less
@@ -14,6 +14,11 @@
     margin-top:50px;
     margin-bottom:50px;
   }
+
+  .item .meta span {
+    margin-right:20px;
+  }
+
   #create {
     background:#F5F5F6;
     padding-top:10px;
@@ -27,7 +32,7 @@
   #tags {
     margin-top:40px;
   }
-  
+
   .button.tag {
     margin-top:5px;
   }
@@ -43,6 +48,11 @@
   .description {
     margin-top:20px;
   }
+
+  #from {
+    margin-right:20px;
+  }
+
   #comments {
     margin-top:20px;
     #submit {
