list test answers

--- a/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
+++ b/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
@@ -3,5 +3,5 @@ td.title {{ testTitle }}
 td.date {{ date }}
 td {{state}}
 td.save
-  a.ui.small.green.save.button(href="/admin/psychotestresult/{{id}}") 查看结果
+  a.ui.small.green.save.button(href="/admin/psychotestresult/tid={{testId}}&rid={{id}}") 查看结果
   .ui.small.red.input.button(style="margin-left:20px;") 输入档案
