--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -49,6 +49,7 @@ html(class="no-js")
   script(src="/scripts/app.js")
   script(src="/scripts/hal/articles.js")
   script(src="/scripts/hal/blog.js")
+  script(src="/scripts/hal/psychtests.js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
   script(src="/scripts/common/category.js")
