--- a/dionysus-client/yo/templates/home/organization/home.jade
+++ b/dionysus-client/yo/templates/home/organization/home.jade
@@ -1,23 +1,27 @@
 #home.organization
   .ui.centered.stackable.grid
     .body.eight.wide.column
-      img.ui.image(src="/public/images/question.png")
       #content.basic.ui.segment
-        h2.ui.header.title 心理机构
+        ui.four.column.stackable.grid
+        .column
+          .ui.basic.segment
+            img.ui.image(src="/public/images/question.png")
+            h2.ui.header.title 心理机构
+            .ui.divider
         #orgList.ui.four.column.stackable.grid
           |{{#each organizations}}
           .column
             .ui.basic.segment
               img.ui.fluid.image(src="{{avatar}}")
-              .org.link
+              .org.link(style="margin-top:15px;text-align:center;")
                 h4
-                  a.title(href="/organizations/{{id}}") {{about}}
+                  a.title(href="/organizations/{{id}}") {{realName}}
           |{{/each}}
         #pagnationWrapper
           #pagnation
     .sidebar.four.wide.column
-      .ui.basic.segment#add
+      .ui.basic.segment#add(style="text-align:center;background:#F5F5F6;padding-top:10px;padding-bottom:30px;padding-left:50px;padding-right:50px;")
         p
-          h4 申请加入心理圈
-        #addContainer
-          .ui.big.green.button#adding 申 请
+          h4 我要申请机构用户，我要申请加入心理圈！
+        #addContainer(style="margin-top:30px;padding-left:30px;padding-right:30px;")
+          .ui.fluid.green.button#adding 申 请
