add server controller to do the evaluation

--- a/dionysus-client/yo/templates/admin/psychtests/answers.jade
+++ b/dionysus-client/yo/templates/admin/psychtests/answers.jade
@@ -1,6 +1,6 @@
 .ui.segment 
 	a.ui.tag.label {{meta.testTitle}}
-	a.ui.small.green.submit.button 计算中间值
+	a.ui.small.green.submit.button(href="/admin/psychotestresult/calc/{{meta.id}}") 计算中间值
 	p
 		.ui.horizontal.list
 			.item
